crates/credential/tests/probes/scheme_sensitivity_public_with_secret.stderr
error: field `secret` on #[auth_scheme(public)] struct cannot be SecretString — declare #[auth_scheme(sensitive)] instead (per Tech Spec §15.5)
  --> tests/probes/scheme_sensitivity_public_with_secret.rs:11:5
   |
11 |     pub secret: SecretString, // SecretString on public-tagged scheme — REJECT
   |     ^^^
